[gd_scene load_steps=6 format=3 uid="uid://e8qb8pct4ykf"]

[ext_resource type="Script" path="res://survivor_game.gd" id="1_b5tgc"]
[ext_resource type="PackedScene" uid="uid://cnetrjct8j3cc" path="res://player.tscn" id="1_tt4tr"]
[ext_resource type="PackedScene" uid="uid://dv8c880ofughh" path="res://pine_tree.tscn" id="2_pb6kr"]

[sub_resource type="Curve2D" id="Curve2D_rm60m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2014, 1209, 0, 0, 0, 0, -129, 1203, 0, 0, 0, 0, -123, -121, 0, 0, 0, 0, 2014, -109, 0, 0, 0, 0, 2014, 1209)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_nyde3"]
font_size = 64

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_b5tgc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_top = 4.0
offset_right = 1919.0
offset_bottom = 1080.0
color = Color(0.570196, 0.874961, 0.597606, 1)

[node name="Player" parent="." instance=ExtResource("1_tt4tr")]
position = Vector2(922, 581)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-922, -581)
curve = SubResource("Curve2D_rm60m")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(2014, 1209)
rotation = -3.13879

[node name="Pine Tree" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(191, 477)

[node name="Pine Tree2" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(553, 979)

[node name="Pine Tree3" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(364, 825)

[node name="Pine Tree7" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1500, 902)

[node name="Pine Tree8" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1297, 458)

[node name="Pine Tree9" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1432, 560)

[node name="Pine Tree10" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(464, 302)

[node name="Pine Tree11" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1182, 574)

[node name="Pine Tree12" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1883, 647)

[node name="Pine Tree4" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(236, 155)

[node name="Pine Tree5" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1517, 159)

[node name="Pine Tree6" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(718, 172)

[node name="Pine Tree13" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(750, 956)

[node name="Pine Tree14" parent="." instance=ExtResource("2_pb6kr")]
position = Vector2(1067, 230)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
autostart = true

[node name="Game_Over" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Game_Over"]
offset_right = 1918.0
offset_bottom = 1083.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.67451)

[node name="Label" type="Label" parent="Game_Over/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_nyde3")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
